tests/invalid/functions/redefine_variable.rs
/*
fail: 1
*/

foo(x: i64): i64 {
    x: i64 = 3;
}

main(): i32 {
    foo(1);
}